Add VTX1 assembler design, documentation, and examples
- Implement initial directory structure and documentation for the VTX1 assembler
- Include README files for lexer, parser, codegen, grammar, utilities, and examples
- Add assembler documentation with architecture, instruction syntax, and VLIW encoding
- Provide example assembly files for VLIW, ternary math, and hello world
- Update documentation generation in Taskfile to include assembler docs

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -159,7 +159,8 @@ tasks:
     desc: Generate documentation in PDF
     cmds:
       - echo "Generating documentation..."
-      - asciidoctor-pdf --theme docs/ARCHITECTURE.yml -r asciidoctor-diagram -o "{{.RELEASE_DIR}}/vtx1l-architecture.pdf" docs/ARCHITECTURE.adoc
+      - asciidoctor-pdf --theme docs/ARCHITECTURE.yml -r asciidoctor-diagram -o "{{.RELEASE_DIR}}/vtx1-architecture.pdf" docs/ARCHITECTURE.adoc
+      - asciidoctor-pdf --theme src/assembler/docs/assembler.yml -r asciidoctor-diagram -o "{{.RELEASE_DIR}}/vtx1-assembler.pdf" src/assembler/docs/assembler.adoc
       - echo "Documentation generated in {{.RELEASE_DIR}}"
 
   install:
